fix broken a links - wrong height

--- a/src/components/Projects/Project.module.css
+++ b/src/components/Projects/Project.module.css
@@ -16,17 +16,23 @@
   grid-gap: 4vw;
 }
 
-.project:nth-child(even) .imgInfo {
-  margin-top: 350px; /* Adjust as needed */
+.project:nth-child(2) {
+  margin-top: 350px;
+}
+
+.project:nth-child(odd) {
+  margin-top: -350px; /* Adjust as needed */
+}
+
+.project:first-of-type {
+  margin-top: 0;
 }
 
 .project {
   width: 100%;
-  height: 350px;
   display: block;
   position: relative;
   transition: 0.4s;
-  margin-bottom: 300px;
 }
 
 .ref {
@@ -98,7 +104,11 @@
     padding-left: 0;
   }
 
-  .project:nth-child(even) .imgInfo {
+  .project:nth-child(2) {
+    margin-top: 0;
+  }
+
+  .project:nth-child(odd) {
     margin-top: 0px;
   }
 
